[package]
name = "bevy-editor-experiment"
version = "0.1.0"
edition = "2021"

[lib]
name = "bevy_editor_experiment_lib"
path = "src/lib.rs"

[[bin]]
name = "bevy-editor-experiment"
path = "src/main.rs"

[dependencies]
bevy = "0.14.2"

[profile.dev]
opt-level = 0

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
